# sofomo_geolocation_api

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: clients.py  decorators.py  main.py  middleware.py  router.py
app/api/dependencies/: common.py  database.py
app/api/handlers/: maintenance.py
app/api/handlers/geolocation/: add.py  delete.py  geolocation.py  get.py  list.py  routers.py
app/db/: db_session.py
app/db/models/: base.py  metadata.py  models.py
app/db/repositories/: base.py  geolocation.py
app/models/: base.py  models.py
config/: settings.py
geolocation_api/: clients.py  database.py  decorators.py  main.py  router.py
geolocation_api/api/: models.py
geolocation_api/api/dependencies/: common.py
geolocation_api/api/handlers/geolocation/: add.py  routers.py
migrations/: env.py
migrations/versions/: 43f18eb88856_new_migration.py  977086f02389_new_migration.py  b4e8cc92516c_new_migration.py  bc9c2ca5f8d9_new_migration.py  d8787ac95ebb_initial_migration.py  ffd9515195a5_new_migration.py
tests/: conftest.py  test_add_geolocation.py  test_delete_geolocation.py  test_geolocation.py  test_get_geolocation.py  test_ipstack_client.py  test_list_geolocations.py  test_urls.py
tests/__snapshots__/: test_add_geolocation.ambr  test_delete_geolocation.ambr  test_get_geolocation.ambr  test_list_geolocations.ambr
tests/json/: ipstack_geolocation_response.json  response.json
